[FEAT.] Sends mail - Time gap works